# KingEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  help.md  sandbox.py  startup.sh
.github/workflows/: lidar-ci-test.yml
src/: main.cpp
src/Sick-Perception/: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  package.xml
src/Sick-Perception/.github/workflows/: ci.yml
src/Sick-Perception/config/: params.yaml
src/Sick-Perception/extra/nt-bridge/: .gitignore  CMakeLists.txt  package.xml
src/Sick-Perception/extra/nt-bridge/src/: main.cpp
src/Sick-Perception/launch/: ldrp.launch.py
src/Sick-Perception/src/: main.cpp
src/Sick-Perception/src/ldrp/: filtering.hpp  grid.hpp  perception.cpp  perception.hpp  timestamp_sampler.hpp
src/Sick-Perception/src/legacy-ref/: main.cpp
src/Sick-Perception/src/legacy-ref/core/: CMakeLists.txt  filtering.hpp  grid.hpp  lidar_api.cpp  lidar_api.h  mem_utils.hpp  pcd_streaming.cpp  pcd_streaming.h
src/custom_types/: CMakeLists.txt
src/custom_types/msg/: Map.msg
src/custom_types/srv/: GetDistToObs.srv  SetTrackVelocity.srv  StartOffload.srv
src/direct_lidar_inertial_odometry/: .gitignore
src/king_engine/: CMakeLists.txt  package.xml
src/king_engine/include/king_engine/: QuaternionHelp.hpp
src/king_engine/include/king_engine/subsystems/: Collection.h  subsystem_util.h
src/king_engine/launch/: lance.launch.py
src/king_engine/src/: main.cpp
src/king_engine/src/subsystems/: Collection.cpp
src/localization/: package.xml
src/localization/localization/: cloud.py  imu.py  transformer.py
src/path_plan/: CMakeLists.txt  package.xml
src/path_plan/config/: params.yaml
src/path_plan/launch/: nav.launch.py
src/path_plan/src/path_plan/: pathplan.cpp  pathplan.hpp
src/py/: usb_diff.py
src/rio_interface/: package.xml  setup.cfg  setup.py
src/rio_interface/rio_interface/: rio_interface.py
src/ros/custom_types/: CMakeLists.txt  package.xml
src/ros/custom_types/msg/: Map.msg  MotorNeutral.msg  MotorPercent.msg  MotorVelocity.msg  Path.msg
src/ros/custom_types/srv/: SetTrackVelocity.srv
src/ros/king_engine/: CMakeLists.txt  package.xml
src/ros/king_engine/autonomy/: auto.cpp  auto.hpp
src/ros/king_engine/include/king_engine/: ros_bridge.hpp
src/ros/king_engine/include/king_engine/subsystems/: Hopper.h
src/ros/king_engine/launch/: lance.launch.py  startup.launch.py  usb_diff.py
src/ros/king_engine/src/: main.cpp
src/ros/king_engine/src/subsystems/: Hopper.cpp
src/ros/lidar/: .gitignore  CMakeLists.txt  package.xml
src/ros/lidar/include/lidar/: ros_bridge.hpp
src/ros/lidar/src/: lidar.cpp  main.cpp
src/ros/lidar/src/test/: tmain.cpp
src/ros/localization/: calibration.py  cloud.py  constants.py  imu.py  main.py  package.xml  setup.py
src/ros/localization/localization/: calibration.py  constants.py  localization_main.py  main.py  transformer.py
src/ros/localization/src/: dlio.yaml  params.yaml  transform.py
src/ros/monolith/: CMakeLists.txt  package.xml
src/ros/monolith/src/: main.cpp
src/ros/path_plan/: CMakeLists.txt  package.xml
src/ros/path_plan/config/: params.yaml
src/ros/path_plan/include/path_plan/: BlockArray2D.hpp  PathPlanNode.hpp  WeightMap.hpp  mapping.hpp  pathplan.hpp  ros_bridge.hpp
src/ros/path_plan/src/: PathPlanNode.cpp  WeightMap.cpp  main.cpp  path_plan.cpp
src/ros/path_plan/src/old/: WeightMap.cpp  WeightMap.hpp
src/ros/path_plan/src/path_plan/: WeightMap.cpp  mapping.hpp  pathplan.cpp  pathplan.hpp
src/ros/path_plan/src/test/: path_plan_test.cpp
src/ros/rio_interface/: CMakeLists.txt  package.xml
src/ros/rio_interface/include/rio_interface/: MotorControlNode.hpp
src/ros/rio_interface/rio_interface/: rio_interface.py
src/ros/rio_interface/src/: MotorControlNode.cpp  main.cpp  motor_connector.cpp
src/ros/traversal/: CMakeLists.txt  package.xml
src/ros/traversal/include/traversal/: motion_profile.hpp  ros_bridge.hpp
src/ros/traversal/src/: main.cpp  motion_profile.cpp  path_plan.cpp  test.cpp
src/ros/video_publisher/: comments.md  package.xml  setup.py
src/ros/video_publisher/video_publisher/: test.py  vpub.py
src/scripts/: README.md  multibagger.py  recorder.bash
src/sick_launcher/: package.xml  requirements.txt  setup.cfg  setup.py
src/sick_launcher/sick_launcher/: launcher.py
src/stubs/: destination.cpp  destination.hpp  localization_stub.py  location.cpp  location.hpp  makefile  notif_sys.cpp  notif_sys.hpp  transfer_types.hpp  util.hpp
src/stubs/destination_sys_test/: listener.cpp  makefile  speaker.cpp
src/stubs/fix_ipc_utility/: main.cpp  makefile
src/stubs/notif_sys_test/: makefile  notifier.cpp  waiter.cpp
src/stubs/python_test/: caller.py  makefile  reader.cpp
src/subsystems/: Collection.c  Collection.cpp  Collection.h  Hopper.c  Hopper.cpp  Hopper.h  subsystem_util.h
src/traversal/: CMakeLists.txt  package.xml
src/traversal/include/traversal/: QuaternianHelp.hpp  motion_profile.hpp
src/traversal/src/: main.cpp  motion_profile.cpp
src/video_publisher/: setup.cfg
src/video_publisher/rviz/: cam_visualizer_layout.rviz
src/video_publisher/video_publisher/: cam_serial_diff.py
