<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>king_engine</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="willmoiser@gmail.com">sigma</maintainer>
  <license>MIT</license>

  <depend>rclcpp</depend>
  <depend>custom_types</depend>
  <!-- <depend>direct_lidar_odometry</depend> -->
  <depend>path_plan</depend>
  <depend>geometry_msgs</depend>
  <depend>sick_scan_xd</depend>
  <depend>traversal</depend>
  <depend>sick_perception</depend>
  <depend>video_publisher</depend>
  <exec_depend>ros2launch</exec_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
